--- a/website/src/output.css
+++ b/website/src/output.css
@@ -596,18 +596,6 @@ video {
   position: relative;
 }
 
-.left-1 {
-  left: 0.25rem;
-}
-
-.top-1 {
-  top: 0.25rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
 .col-span-3 {
   grid-column: span 3 / span 3;
 }
@@ -730,12 +718,6 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.truncate {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .text-wrap {
   text-wrap: wrap;
 }
@@ -782,10 +764,6 @@ video {
 .bg-slate-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-}
-
-.bg-slate-100\/5 {
-  background-color: rgb(241 245 249 / 0.05);
 }
 
 .bg-white {
@@ -1045,6 +1023,20 @@ nav {
   right: 5rem;
 }
 
+.font-black h2 {
+  position: absolute;
+}
+
+.font-black h1 {
+  position: absolute;
+  top: 20px;
+}
+
+.font-black .text-shadow {
+  text-shadow: black 0.1rem 0.1rem 0.2rem;
+  color: white;
+}
+
 @keyframes stickyNav {
   100% {
     background-color: darkgreen;
@@ -1057,12 +1049,6 @@ nav {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:truncate:hover {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .hover\:border-l-4:hover {
